# Samira3D

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Samira3D.sln
Engine3/: AssimpImporter.cpp  AssimpImporter.h  CameraAbstract.cpp  CameraAbstract.h  Component.h  DirectionalLight.cpp  DirectionalLight.h  Engine3.vcxproj  Engine3.vcxproj.filters  Font.cpp  Font.h  GeometricMesh.cpp  GeometricMesh.h  Globals.cpp  Globals.h  IndexedMesh.cpp  IndexedMesh.h  IndexedMeshComp.cpp  IndexedMeshComp.h  Lamp.cpp  Lamp.h  LightData.h  LightDepthMapShader.frag  LightDepthMapShader.vert  MaterialComp.cpp  MaterialComp.h  MaterialNormalComp.cpp  MaterialNormalComp.h  MaterialNormalShader.frag  MaterialShader.frag  MaterialShader.vert  Mesh.cpp  Mesh.h  MeshComp.cpp  MeshComp.h  OrthoCamera.cpp  OrthoCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  RenderPass.cpp  (+36 more)
Samira3D/: BasicShader.cpp  BasicShader.h  Camera.cpp  Camera.h  Cameras.cpp  Cameras.h  ERROR.cpp  ERROR.h  Game.cpp  Game.h  Input.cpp  Input.h  Main.cpp  MainComponent.cpp  MainComponent.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  PhongShader.cpp  RenderUtil.cpp  RenderUtil.h  ResourceLoader.cpp  ResourceLoader.h  Samira.mtl  Samira3D.blend  Samira3D.dae  Samira3D.fbx  Samira3D.rc  Samira3D.vcxproj  Samira3D.vcxproj.filters  SceneLoader.cpp  SceneLoader.h  Shader.cpp  Shader.h  Shaders.cpp  Shaders.h  Texture.cpp  Texture.h  Time.cpp  (+14 more)
